hphp/hack/test/typecheck/expression_trees/dynamic_static_method_call.php.exp
ERROR: File "dynamic_static_method_call.php", line 15, characters 7-22:
Expression trees only support static method calls on `static` and named classes. (Parsing[1002])
ERROR: File "dynamic_static_method_call.php", line 15, characters 7-10:
Variable `$cls` is undefined, or not always defined. (Naming[2050])
  File "", line 0, characters 0-0:
  Did you mean `$this` instead?
